# wanga

./: .envrc  .gitignore  LICENSE  README.md  api.html  flake.nix  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yaml  docs_pages.yaml  lint.yaml  tests.yaml
_modules/: index.html
_modules/wanga/models/: messages.html  model.html
_modules/wanga/schema/: extract.html  extractor.html  jsonschema.html  schema.html
_sources/: api.rst.txt
docs/: api.rst  conf.py  index.rst
tests/: test_ai_function_integration.py  test_functions.py  test_nothing.py  test_runtime.py  test_schema.py
tests/test_models/: test_messages.py  test_ollama.py  test_openai.py
wanga/: __init__.py  common.py  function.py  image_utils.py  runtime.py
wanga/models/: __init__.py  messages.py  model.py  ollama.py  openai.py
wanga/schema/: __init__.py  extract.py  extractor.py  extractor_fns.py  jsonschema.py  normalize.py  schema.py  utils.py
wanga/templates/: __init__.py  common.py
