[tool.poetry]
name = "wanga"
version = "0.1.0"
description = "A library for interacting with Large Language Models."
authors = ["Artur Chakhvadze <norpadon@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
attrs = "^23.2.0"
docstring-parser = "^0.16"
jinja2 = "^3.1.4"
python = ">3.10,<4.0"
tiktoken = "^0.7.0"
tenacity = "^8.5.0"
json5 = "^0.9.25"

[tool.poetry.extras]
openai = ["openai", "openai-function-tokens"]
anthropic = ["anthropic"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
anthropic = "^0.30.0"
openai = "^1.35.7"
pillow = "^10.3.0"
pydantic = "^2.7.4"
pyright = "^1.1.369"
pytest = "^8.2.2"
pytest-asyncio = "^0.24.0"
pytest-dotenv = "^0.5.2"
openai-function-tokens = "^0.1.2"
# Documentation
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-napoleon = "^0.7"
toml = "^0.10.2"

[tool.pytest.ini_options]
addopts = "--doctest-modules -vv --showlocals"

[tool.pyright]
venv = "."
venvPath = ".venv"
pythonVersion = "3.10"
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py310"
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
