[project]
name = "wanga"
version = "0.1.1"
description = "A library for interacting with Large Language Models."
authors = [{ name = "Artur Chakhvadze", email = "norpadon@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "attrs>=23.2.0",
    "docstring-parser>=0.16",
    "jinja2>=3.1.4",
    "tiktoken>=0.7.0",
    "tenacity>=8.5.0",
    "json5>=0.9.25",
]

[project.optional-dependencies]
openai = ["openai>=1.35.7", "openai-function-tokens>=0.1.2"]
anthropic = ["anthropic>=0.30.0"]
dev = [
    "pillow>=10.3.0",
    "pydantic>=2.7.4",
    "pyright>=1.1.369",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.24.0",
    "pytest-dotenv>=0.5.2",
    "sphinx>=7.3.7",
    "sphinx-rtd-theme>=2.0.0",
    "sphinxcontrib-napoleon>=0.7",
    "toml>=0.10.2",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules -vv --showlocals"

[tool.pyright]
venv = "."
venvPath = ".venv"
pythonVersion = "3.10"
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py310"
line-length = 119

[tool.uv]
dev-dependencies = ["toml>=0.10.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
